--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 .env
 
 # 忽略用户上传的资源和头像目录中的所有文件
-/uploads/resources/
-/uploads/avatars/
+/uploads/resources/*
+/uploads/avatars/*
 # 但保留默认头像文件
 !/uploads/avatars/default-avatar.png
 
